--- a/memoria/contido/conclusions.tex
+++ b/memoria/contido/conclusions.tex
@@ -2,16 +2,31 @@
 \lettrine{C}{omo} cierre del trabajo, cabe reflexionar sobre el desarrollo del mismo así como sobre su estado actual, y su futuro. Dado por finalizado el trabajo, se han alcanzado buena parte de los objetivos fijados en su concepción:
 
 \begin{itemize}
-	\item Se identificaron métodos para la extracción de secciones de \acrshort{tc} así como para el refinado de las mismas.También se analizaron las posibilidades de impresión optimizando el uso de los materiales y de las capacidades de las impresoras. Esto ha permitido trabajar sobre piezas en un nivel más visual e interactivo.
+	\item Se identificaron métodos para la extracción de secciones de \acrshort{tc} así como para el refinado de las mismas. También se analizaron las posibilidades de impresión optimizando el uso de los materiales y de las capacidades de las impresoras. Esto ha permitido trabajar sobre piezas en un nivel más visual e interactivo.
 	\item Se ha llevado a cabo un estudio de las soluciones existentes para el seguimiento 3D realizando pruebas de las mismas sobre los datos propios para extraer las ventajas y desventajas de cada solución en un nivel práctico.
-	\item Se han diseñado e impreso una gran cantidad de marcadores fiduciarios sobre los que se han realizado pruebas de forma iterativa con el fin de refinar y optimizar el diseño hasta obtener un resultado que satisface las características del proyecto. Todo esto mediante el uso de software libre creando así  un proceso adaptable a otros casos de uso.
-	\item Se ha integrado  la solución en el proyecto de \citeauthor{IglesiasGuitian2022} desvirtualizando un posible caso de uso.
+	\item Se han diseñado e impreso una gran cantidad de marcadores fiduciarios sobre los que se han realizado pruebas de forma iterativa con el fin de refinar y optimizar el diseño hasta obtener un resultado que satisface las características del proyecto. Todo esto mediante el uso de software libre creando así un proceso adaptable a otros casos de uso.
+	\item Se desarrolló un sistema robusto de seguimiento de marcadores cúbicos basado en ARuco que permite detectar hasta 3 caras simultáneamente, proporcionando mayor precisión y resistencia a oclusiones parciales.
+	\item Se implementó un algoritmo de transformación de coordenadas que permite convertir las poses detectadas por ARuco en matrices de transformación compatibles con sistemas de renderizado 3D, resolviendo las incompatibilidades entre diferentes convenciones de coordenadas.
+	\item Se creó una aplicación independiente de realidad aumentada que demuestra la viabilidad del sistema de tracking desarrollado, integrando capacidades de carga de modelos 3D mediante \acrshort{assimp} y renderizado con iluminación \gls{phong}.
+	\item Se estableció una arquitectura modular que permite la integración del sistema de tracking como librería independiente, facilitando su incorporación en proyectos existentes como Exposure Render.
+	\item Se ha integrado parcialmente la solución en el proyecto de \citeauthor{IglesiasGuitian2022}, sentando las bases para una integración completa que desvirtualice casos de uso médicos reales.
 \end{itemize}
 \subsection{Enriquecimiento Formativo}
-Es imprescindible destacar la vertiente formativa que presenta este trabajo dada su naturaleza como trabajo de fin de grado. El autor ha tenido la posibilidad de trabajar sobre una serie de campos de los mas variados que comprenden la imagen médica, la impresión 3D, la visión artificial, la realidad virtual, el renderizado en un motor de trazado de rayos. Por otra parte, mencionar la exposición a un ambiente investigador en el \acrshort{citic} del que poder empaparse de la forma de trabajar y la cooperación entre iguales. También se trató de una primera puesta en práctica de los conceptos aprendidos sobre la gestión de proyectos que resultó enriquecedora.
+Es imprescindible destacar la vertiente formativa que presenta este trabajo dada su naturaleza como trabajo de fin de grado. El autor ha tenido la posibilidad de trabajar sobre una serie de campos de lo mas variados que comprenden la imagen médica, la impresión 3D, la visión artificial, la realidad virtual y el renderizado en un motor de trazado de rayos entr otros. Por otra parte, mencionar la exposición a un ambiente investigador en el \acrshort{citic} del que poder empaparse de la forma de trabajar y la cooperación entre iguales. También se trató de una primera puesta en práctica de los conceptos aprendidos sobre la gestión de proyectos que resultó enriquecedora.
 \subsection{Trabajo futuro}
-En la actualidad el proyecto tiene distintas vertientes que pueden ser desarrolladas en el futuro. Por una parte esta la mejora del sistema actual de seguimiento, si bien este en la actualidad es completamente funcional, en sistemas en los que la tasa de refresco de la cámara no es lo suficientemente alto el seguimiento puede dar una sensación de escalonado. Una posible solución sería aplicar algún tipo de filtrado de señales como puede ser un filtro de Kalman, que bien implementado, ayudaría a estimar pasos intermedios entre imágenes para proporcionar una experiencia mas confortable \cite{welch2020kalman}.
+En la actualidad el proyecto tiene distintas vertientes que pueden ser desarrolladas en el futuro:
 
-Una segunda vertiente de mejora, consistiría en reconstruír sobre las imágenes extraídas del casco, un ambiente de realidad aumentada, en el que se pudieran ver los modelos extraídos de las \acrshort{tc} sobre las mismas, donde aprovechándose de los desarrollos de la interfaz de realidad virtual del proyecto de \citeauthor{IglesiasGuitian2022} se pudiera trabajar con la pieza virtual modificando sus parámetros visuales.
+\subsubsection{Integración completa con Exposure Render}
+Una de las líneas de trabajo más prometedoras consiste en completar de forma exitosa la integración del sistema de tracking con Exposure Render. Aunque se han establecido las bases arquitectónicas y se ha desarrollado la librería de tracking como módulo independiente, quedan aspectos por resolver relacionados con el acceso nativo a las cámaras del HTC Vive Pro 2 y la optimización del pipeline de transformación de coordenadas. La consecución de esta integración permitiría aprovechar las capacidades avanzadas de renderizado volumétrico de Exposure Render para visualizar modelos anatómicos extraídos de TC con calidad fotorrealista en tiempo real.
 
-Para terminar, otro posible desarrollo, consistiría en tratar de aumentar la resolución de las imágenes de las cámaras del casco, utilizando las imágenes de cada cámara para crear una imagen compuesta por ambas que permita una mejor detección del marcador fiduciario.
+\subsubsection{Desarrollo de benchmarks para evaluación de marcadores}
+Sería valioso desarrollar un sistema de benchmarking que permita evaluar objetivamente la efectividad de distintos tipos de marcadores fiduciarios en diferentes condiciones. Este benchmark incluiría métricas como precisión de detección, robustez frente a oclusiones, estabilidad del tracking en movimiento y rendimiento bajo diferentes condiciones de iluminación. Los resultados permitirían optimizar el diseño de marcadores para casos de uso específicos y proporcionarían una base científica para futuras investigaciones en el campo.
+
+\subsubsection{Implementación de filtrado de Kalman}
+Si bien el sistema actual de seguimiento es completamente funcional, en sistemas donde la tasa de refresco de la cámara no es suficientemente alta, el seguimiento puede dar una sensación de escalonado. Una posible solución sería implementar un filtro de Kalman que, bien configurado, ayudaría a estimar pasos intermedios entre imágenes y a reducir el ruido en las mediciones de pose. Esto proporcionaría una experiencia más fluida y permitiría mantener el tracking incluso en frames donde el marcador no sea detectado temporalmente \cite{welch2020kalman}.
+
+\subsubsection{Mejoras en realidad aumentada mediante fusión de cámaras}
+Una segunda vertiente de mejora consistiría en reconstruir sobre las imágenes extraídas del casco un ambiente de realidad aumentada más robusto. Esto incluiría utilizar las imágenes de ambas cámaras del HTC Vive Pro 2 para crear una imagen compuesta estereoscópica que permita una mejor detección del marcador fiduciario y una experiencia de realidad aumentada más inmersiva. Aprovechándose de los desarrollos de la interfaz de realidad virtual del proyecto de \citeauthor{IglesiasGuitian2022}, se podría trabajar con la pieza virtual modificando sus parámetros visuales en tiempo real.
+
+\subsubsection{Extensión a múltiples marcadores}
+Finalmente, otra línea de desarrollo interesante sería la extensión del sistema para soportar el seguimiento simultáneo de múltiples marcadores cúbicos independientes. Esto permitiría el seguimiento de varios objetos anatómicos simultáneamente o la implementación de sistemas de referencia más complejos que mejoren la precisión general del tracking mediante triangulación entre marcadores.
