--- a/memoria/memoria_tfg.tex
+++ b/memoria/memoria_tfg.tex
@@ -101,8 +101,8 @@
 
 \appendix
 \appendixpage
-\include{anexos/adicional}
-%\include{anexos/...}
+\include{anexos/detalles_implementacion}
+\include{anexos/diagramas_detallados}
 
 \printglossary[type=\acronymtype,title=\nomeglosarioacronimos]
 \printglossary[title=\nomeglosariotermos]
